[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawl0"
version = "1.0.0"
description = "The open-source Firecrawl alternative. Scrape any website. Get LLM-ready output. Free."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "aka0 Labs", email = "support@aka0.net" },
]
keywords = ["scraper", "web-scraping", "markdown", "llm", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "playwright>=1.40",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "typer[all]>=0.9",
    "pydantic>=2.5",
    "lxml>=5.0",
    "markdown>=3.5",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.25",
]

[project.optional-dependencies.pdf]
weasyprint = ["weasyprint>=60"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
crawl0 = "crawl0.cli.main:app"

[project.urls]
Homepage = "https://github.com/tracedog/crawl0"
Repository = "https://github.com/tracedog/crawl0"
Issues = "https://github.com/tracedog/crawl0/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit real URLs (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
